unpackaged/main/default/objects/CA_Main_Event__c/fields/Hotel_1_Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Hotel_1_Cancellation_Policy__c</fullName>
    <label>Hotel 1 Cancellation Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>72 Hours prior to check-in</fullName>
            </value>
            <value>
                <fullName>48 Hours prior to check-in</fullName>
            </value>
            <value>
                <fullName>24 Hours prior to check-in</fullName>
            </value>
            <value>
                <fullName>NLT Cancelation Date</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>tbd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>