unpackaged/main/default/objects/CA_Main_Event__c/fields/Hotel_2_Country__c.field-meta.xml
<CustomField>
    <fullName>Hotel_2_Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>