unpackaged/main/default/objects/CA_Main_Event__c/fields/Hotel_2_Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hotel_2_Room_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hotel 2 Room Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>