unpackaged/main/default/objects/CA_Main_Event__c/fields/Housing_Logistics_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Housing_Logistics_Vendor__c</fullName>
    <label>Housing Logistics Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Attendee Responsible</fullName>
            </value>
            <value>
                <fullName>Attendees book on own with code</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Congress Central</fullName>
            </value>
            <value>
                <fullName>GES</fullName>
            </value>
            <value>
                <fullName>GES - Test</fullName>
            </value>
            <value>
                <fullName>Hilton Hawaiian Village</fullName>
            </value>
            <value>
                <fullName>Lindsey Kokenge manages</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>OnPeak</fullName>
            </value>
            <value>
                <fullName>Staff Responsibility</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>