unpackaged/main/default/objects/CA_Main_Event__c/fields/Housing_Logistics_Vendor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Housing_Logistics_Vendor_Contact__c</fullName>
    <label>Housing Logistics Vendor Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>