unpackaged/main/default/objects/CA_Main_Event__c/fields/Housing_Logistics_Vendor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Housing_Logistics_Vendor_Phone__c</fullName>
    <label>Housing Logistics Vendor Phone</label>
    <type>Phone</type>
</CustomField>