unpackaged/main/default/objects/CA_Main_Event__c/fields/Housing_Portal_Log_In__c.field-meta.xml
<CustomField>
    <fullName>Housing_Portal_Log_In__c</fullName>
    <label>Housing Portal Log-In</label>
    <length>100</length>
    <type>Text</type>
</CustomField>