unpackaged/main/default/objects/CA_Main_Event__c/fields/I_D_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_D_Supervisor__c</fullName>
    <label>I&amp;D Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ken Pantoliano</fullName>
            </value>
            <value>
                <fullName>Randy Frields</fullName>
            </value>
            <value>
                <fullName>Pat Gallagher</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Finstrom, Brad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>