unpackaged/main/default/objects/CA_Main_Event__c/fields/Install_Date_Day_1__c.field-meta.xml
<CustomField>
    <fullName>Install_Date_Day_1__c</fullName>
    <label>Install Date - Day 1</label>
    <type>Date</type>
</CustomField>