unpackaged/main/default/objects/CA_Main_Event__c/fields/Install_Date_Day_3__c.field-meta.xml
<CustomField>
    <fullName>Install_Date_Day_3__c</fullName>
    <label>Install Date - Day 3</label>
    <type>Date</type>
</CustomField>