unpackaged/main/default/objects/CA_Main_Event__c/fields/Install_Hours_Close_Day_3__c.field-meta.xml
<CustomField>
    <fullName>Install_Hours_Close_Day_3__c</fullName>
    <label>Install Hours Close- Day 3</label>
    <type>Time</type>
</CustomField>