unpackaged/main/default/objects/CA_Main_Event__c/fields/Meeting_Room_1_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_1_Time__c</fullName>
    <label>Meeting Room 1 Time</label>
    <type>DateTime</type>
</CustomField>