unpackaged/main/default/objects/CA_Main_Event__c/fields/Meeting_Room_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_2_Name__c</fullName>
    <label>Meeting Room 2 Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>