unpackaged/main/default/objects/CA_Main_Event__c/fields/Name_Auto__c.field-meta.xml
<CustomField>
    <fullName>Name_Auto__c</fullName>
    <description>This field is used in record header. If the name of record text field is blank, it will display the auto generated number</description>
    <formula>BLANKVALUE(Name_of_Event__c, Name)</formula>
    <inlineHelpText>This field is used in record header. If the name of record text field is blank, it will display the auto generated number</inlineHelpText>
    <label>Name_Auto</label>
    <type>Text</type>
</CustomField>