unpackaged/main/default/objects/CA_Main_Event__c/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <label>Name of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>