unpackaged/main/default/objects/CA_Main_Event__c/fields/Name_of_the_Facility__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Facility__c</fullName>
    <formula>IF(ISBLANK( Facility_Name__r.Name),Facility_Name_Text__c  , Facility_Name__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of the Facility</label>
    <type>Text</type>
</CustomField>