unpackaged/main/default/objects/CA_Main_Event__c/fields/NNI_Registration_Site_Required__c.field-meta.xml
<CustomField>
    <fullName>NNI_Registration_Site_Required__c</fullName>
    <label>NNI Registration Site Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>