unpackaged/main/default/objects/CA_Main_Event__c/fields/Number_of_Rooms_Requested_5__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms_Requested_5__c</fullName>
    <label>Number of Rooms Requested 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>