unpackaged/main/default/objects/CA_Main_Event__c/fields/Partnered_Event__c.field-meta.xml
<CustomField>
    <fullName>Partnered_Event__c</fullName>
    <label>Partnered Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>