unpackaged/main/default/objects/CA_Main_Event__c/fields/Photos__c.field-meta.xml
<CustomField>
    <fullName>Photos__c</fullName>
    <inlineHelpText>Link to Photos</inlineHelpText>
    <label>Photos</label>
    <type>Url</type>
</CustomField>