unpackaged/main/default/objects/CA_Main_Event__c/fields/Project_Central_Show__c.field-meta.xml
<CustomField>
    <fullName>Project_Central_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Central Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>CA Main Events</relationshipLabel>
    <relationshipName>CA_Main_Events</relationshipName>
    <type>Lookup</type>
</CustomField>