unpackaged/main/default/objects/CA_Main_Event__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget cut</fullName>
            </value>
            <value>
                <fullName>Event Not Occurring</fullName>
                <isActive>false</isActive>
                <label>Event Not Occurring</label>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
                <label>Exhibit space sold out</label>
            </value>
            <value>
                <fullName>Product owner decision</fullName>
            </value>
            <value>
                <fullName>Public Health Issue</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>