unpackaged/main/default/objects/CA_Main_Event__c/fields/Registrants_Exhibit_Hall__c.field-meta.xml
<CustomField>
    <fullName>Registrants_Exhibit_Hall__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exhibit Hall Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>