unpackaged/main/default/objects/CA_Main_Event__c/fields/Secretariat_Name__c.field-meta.xml
<CustomField>
    <fullName>Secretariat_Name__c</fullName>
    <label>Secretariat Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>