unpackaged/main/default/objects/CA_Main_Event__c/fields/Secretariat_Same_as_Association__c.field-meta.xml
<CustomField>
    <fullName>Secretariat_Same_as_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secretariat Same as Association</label>
    <type>Checkbox</type>
</CustomField>