unpackaged/main/default/objects/CA_Main_Event__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>