unpackaged/main/default/objects/CA_Main_Event__c/fields/Social_Media_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Utilized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media Utilized</label>
    <type>Checkbox</type>
</CustomField>