unpackaged/main/default/objects/CA_Main_Event__c/fields/Targeted_Move_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Move_In_Date_Time__c</fullName>
    <label>Targeted Move-In Date/Time</label>
    <type>DateTime</type>
</CustomField>