unpackaged/main/default/objects/CA_Main_Event__c/fields/Teaching_Event__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Event__c</fullName>
    <label>Is Teaching Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>