unpackaged/main/default/objects/CA_Main_Event__c/fields/US_Ex_US__c.field-meta.xml
<CustomField>
    <fullName>US_Ex_US__c</fullName>
    <label>US/Ex-US</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Ex-US</fullName>
            </value>
            <value>
                <fullName>Ex-US Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>