unpackaged/main/default/objects/CA_Main_Event__c/recordTypes/BMS_Main_Event.recordType-meta.xml
<RecordType>
    <fullName>BMS_Main_Event</fullName>
    <active>true</active>
    <description>This records type and picklist values are specific to BMS.</description>
    <label>BMS Main Event</label>
</RecordType>