unpackaged/main/default/objects/CA_Main_Event__c/recordTypes/CA_Connect_Event_CC.recordType-meta.xml
<RecordType>
    <fullName>CA_Connect_Event_CC</fullName>
    <active>true</active>
    <label>CA Connect Event CC</label>
</RecordType>