unpackaged/main/default/objects/CA_Main_Event__c/recordTypes/CA_Connect_Event_Merck.recordType-meta.xml
<RecordType>
    <fullName>CA_Connect_Event_Merck</fullName>
    <active>true</active>
    <label>CA Connect Event Merck</label>
</RecordType>