unpackaged/main/default/objects/CA_Main_Event__c/recordTypes/Demo_Event_Rec_Type.recordType-meta.xml
<RecordType>
    <fullName>Demo_Event_Rec_Type</fullName>
    <active>true</active>
    <description>Only for demo purposes. Not to be deployed to Prod</description>
    <label>Demo Event Rec Type</label>
</RecordType>